--- a/index.html
+++ b/index.html
@@ -1,14 +1,234 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        this is going to be my cv
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+</head>
+
+<body class="flex-row">
+    <div id="paper">
+        <p id="name">
+            Milán Horváth
+        </p>
+        <div id="header" class="flex-row between">
+            <div class="flex-col details">
+
+                <p class="faded-text">Software Developer</p>
+                <a class="faded-text" href="tel:+36305485822">+36-30-548-5822</a>
+                <a class="faded-text" href="mailto:horvath.milan@kodinformatika.hu">horvath.milan@kodinformatika.hu</a>
+                <a class="faded-text" href="https://www.linkedin.com/in/mil%C3%A1n-horv%C3%A1th-9584b8171/">LinkedIn</a>
+            </div>
+            <div class="flex-col align-end faded-text address">
+                <p id="city">
+                    7500, Nagyatád
+                </p>
+                <p>
+                    Szentkirályi utca 1.
+                </p>
+                <p id="country">
+                    Hungary
+                </p>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="section">
+            <div class="section-title">
+                Education
+            </div>
+            <div class="section-body flex-col">
+                <div class="section-item flex-col">
+                    <p>
+                        Munkácsy Mihály Gimnázium
+                    </p>
+                    <p class="faded-text small-text">
+                        English-Hungarian bilingual program
+                    </p>
+                    <p class="faded-text">
+                        Kaposvár
+                    </p>
+                    <p class="faded-text small-text">
+                        2008-2013
+                    </p>
+                </div>
+                <div class="section-item flex-col">
+                    <a href="https://www.linkedin.com/school/progmasters/" target="_blank">
+                        Progmasters
+                    </a>
+                    <p class="faded-text small-text">
+                        full-stack developer bootcamp
+                    </p>
+                    <p class="faded-text">
+                        Budapest
+                    </p>
+                    <p class="faded-text small-text">
+                        2018
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <hr>
+        <div class="section">
+            <div class="section-title">
+                Work experience
+            </div>
+            <div class="section-body flex-col">
+                <div class="section-item flex-col">
+                    <a href="https://www.linkedin.com/company/kodinformatika" target="_blank">
+                        Kód Informatikai és Szolgáltató Kft.
+                    </a>
+                    <p class="faded-text small-text">
+                        full-stack software developer
+                    </p>
+                    <p class="faded-text">
+                        Budapest
+                    </p>
+                    <p class="faded-text small-text">
+                        2018-present
+                    </p>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="section">
+            <div class="section-title">
+                Tech stack
+            </div>
+            <div class="flex-row-wrap interests">
+                <div class="chip">
+                    React
+                </div>
+                <div class="chip">
+                    Angular
+                </div>
+                <div class="chip">
+                    NodeJS
+                </div>
+                <div class="chip">
+                    Express
+                </div>
+                <div class="chip">
+                    Figma
+                </div>
+                <div class="chip">
+                    Material Design
+                </div>
+                <div class="chip">
+                    Tailwind
+                </div>
+                <div class="chip">
+                    Storybook
+                </div>
+                <div class="chip">
+                    REST
+                </div>
+                <div class="chip">
+                    GraphQL
+                </div>
+                <div class="chip">
+                    Java
+                </div>
+                <div class="chip">
+                    Spring
+                </div>
+                <div class="chip">
+                    SQL
+                </div>
+                <div class="chip">
+                    NoSQL
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="section">
+            <div class="section-title">
+                Short bio
+            </div>
+            <div class="section-body flex-col">
+                <div class="section-item flex-col">
+                    <p class="long-text">
+                        I was first introduced to programming on a university course, which later
+                        inspired me to start a developer bootcamp. After finishing it I immediately
+                        started working at Kód where I had the opportunity work on numerous
+                        interesting projects, while getting familiar with new technologies.
+                    </p>
+                    <p class="long-text">
+                        I always had a special interest in UX/UI and fortunately I have had the
+                        opportunites to participate in the design pahse of multiple web applications
+                        and PWAs.
+                    </p>
+                    <p class="long-text">
+                        Besides work I always have at least one pet project going on, as I love to come
+                        up with solutions for problems that may not even exist in the first place, and
+                        I always finish each and every one of them without exception. /s
+                    </p>
+                    <p class="long-text">
+                        I have too many hobbies and I may need to reduce the amount of them to
+                        avoid going insane, and to maybe even have a little actual free time to relax.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        <hr>
+        <div class="section">
+            <div class="section-title">
+                Interests
+            </div>
+            <div class="flex-row-wrap interests">
+                <div class="chip">
+                    photography
+                </div>
+                <div class="chip">
+                    videography
+                </div>
+                <div class="chip">
+                    gaming
+                </div>
+                <div class="chip">
+                    home automation
+                </div>
+                <div class="chip">
+                    3D printing
+                </div>
+                <div class="chip">
+                    hiking
+                </div>
+                <div class="chip">
+                    football
+                </div>
+                <div class="chip">
+                    F1
+                </div>
+                <div class="chip">
+                    aviation
+                </div>
+                <div class="chip">
+                    van life
+                </div>
+                <div class="chip">
+                    technology
+                </div>
+                <div class="chip">
+                    music
+                </div>
+                <div class="chip">
+                    cycling
+                </div>
+            </div>
+        </div>
+</body>
+
 </html>
