--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         </p>
         <div id="header" class="flex-row between">
             <div class="flex-col details">
-
                 <p class="faded-text">Software Developer</p>
                 <a class="faded-text" href="tel:+36305485822">+36-30-548-5822</a>
                 <a class="faded-text" href="mailto:horvath.milan@kodinformatika.hu">horvath.milan@kodinformatika.hu</a>
@@ -166,7 +165,7 @@
                     </p>
                     <p class="long-text">
                         I always had a special interest in UX/UI and fortunately I have had the
-                        opportunites to participate in the design pahse of multiple web applications
+                        opportunites to participate in the design phase of multiple web applications
                         and PWAs.
                     </p>
                     <p class="long-text">
